--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 		<title>Vite App</title>
 	</head>
 	<body>
-		<div class="render-container"></div>
+		<div class="render-container">
+			<canvas></canvas>
+		</div>
 		<script type="module" src="./src/main.js"></script>
 	</body>
 </html>
