--- a/index.html
+++ b/index.html
@@ -1,134 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 
-<head>
-	<meta charset="UTF-8" />
-	<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+		<link rel="stylesheet" type="text/css" href="style.css" />
+		<script
+			src="https://kit.fontawesome.com/b0f29e9bfe.js"
+			crossorigin="anonymous"
+		></script>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Vite App</title>
+	</head>
 
-
-
-	<script src="https://kit.fontawesome.com/b0f29e9bfe.js" crossorigin="anonymous">
-	</script>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Vite App</title>
-</head>
-
-<body>
-	<main>
-		<header>
-		</header>
-		<section>
-
-			<a href="#story" id="btn">Explore</a>
-			<img src="./public/images/desert.png" alt="stars-image" id="mountains_front">
-		</section>
-		<div class="story" id="story">
-			<button id="prev-btn">
-				<i class="fas fa-arrow-circle-left "></i>
-			</button>
-			<!-- book -->
-			<div id="book" class="book">
-				<!-- paper1 -->
-				<div id="p1" class="paper">
-					<div class="front">
-						<div id="f1" class="front-content">
-							<h1>
-								<img class="image" src="./public/images/wtt.jpg">
-							</h1>
-
-
+	<body>
+		<main class="mainClass">
+			<header></header>
+			<section>
+				<a href="#story" id="btn">Explore</a>
+				<img
+					src="./public/images/desert.png"
+					alt="stars-image"
+					id="mountains_front"
+				/>
+			</section>
+			<div class="story" id="story">
+				<button id="prev-btn">
+					<i class="fas fa-arrow-circle-left"></i>
+				</button>
+				<!-- book -->
+				<div id="book" class="book">
+					<!-- paper1 -->
+					<div id="p1" class="paper">
+						<div class="front">
+							<div id="f1" class="front-content">
+								<h1>
+									<img class="image" src="./public/images/wtt.jpg" />
+								</h1>
+							</div>
+						</div>
+						<div class="back">
+							<div id="b1" class="back-content">
+								<img src="./public/images/chess/chess.png" width="350" />
+							</div>
 						</div>
 					</div>
-					<div class="back">
-						<div id="b1" class="back-content">
-							<img src="./public/images/chess/chess.png" width="350">
+					<!-- paper2 -->
+					<div id="p2" class="paper">
+						<div class="front text">
+							<div id="f2" class="front-content">
+								<p class="story1">
+									Once upon a time, there was a girl named Saros who was
+									obsessed with spaces and different scientific occurences.With
+									her increasing curiosity, she went to her dad who was an
+									astrophysicist but from the thought of bothering him during
+									his works, she decided to not trouble him and kept her
+									questions with herself. She eagerly waited for Friday night as
+									that was 'The Chess Day'.She and her dad had a long ritual of
+									playing chess every Friday night. She was sure that this
+									time,she will at any cost win her dad in chess.She decided to
+									use this opportunity to get answers to her curiosities too.
+								</p>
+							</div>
+						</div>
+						<div class="back">
+							<div id="b2" class="back-content">
+								<img src="./public/images/chess/chess2.png" height="350px" />
+							</div>
+						</div>
+					</div>
+					<!-- paper 3 -->
+					<div id="p3" class="paper">
+						<div class="front">
+							<div id="f3" class="front-content">
+								<p class="story1">
+									Just when her bishop was at threat she decided to distract her
+									dad and also hit the nail by asking him her questions
+									regarding the event. She asked to her dad,"Dad! Why was i
+									named Saros?"Dad smiled and said,"There's a cycle called Saros
+									cycle for eclipses and i was fascinated with that research
+									when you were just a little kid." Saros (in excitement) asks
+									again,"What's so wonderful about eclipses,Dad?". Dad happily
+									says," In order to unveil that you have to first know
+									everything about the eclipses. " "Checkmate",says Saros.
+								</p>
+							</div>
+						</div>
+						<div class="back">
+							<div id="b3" class="back-content">
+								<img src="./public/images/chess/chess3.png" width="350" />
+							</div>
+						</div>
+					</div>
+					<!-- paper4 -->
+					<div id="p4" class="paper">
+						<div class="front text">
+							<div id="f4" class="front-content">
+								<p class="story1">
+									Dad was willingly ready to lose from his daughter to introduce
+									her to the magical world of eclipses. Bingo!Saros's plan was
+									successful and she was thrilled to know everything about
+									eclipses.Saros's dad was obsessed with eclipses.He was always
+									ready to teach his daughter about the wonders of space and
+									couldn't hold back teaching everything about this mystical
+									event to her. Saros's Dad says joyfully,
+									<b>"Now here begins the majestic journey of eclipses!!"</b>
+								</p>
+							</div>
+						</div>
+						<div class="back">
+							<div id="b4" class="back-content">
+								<h1></h1>
+								<img class="cab" src="./public/images/thh.jpg" />
+							</div>
 						</div>
 					</div>
 				</div>
-				<!-- paper2 -->
-				<div id="p2" class="paper">
-					<div class="front text">
-						<div id="f2" class="front-content">
-							<p class="story1"> Once upon a time, there was a girl named Saros who was
-								obsessed with spaces and different scientific occurences.With her increasing
-								curiosity, she went to her dad who was an astrophysicist but from the thought
 
-
-								of bothering him during his works, she decided to not trouble him and kept her questions
-								with
-								herself. She eagerly waited for Friday night as that was 'The Chess Day'.She and her dad
-								had
-								a
-								long ritual of playing chess every Friday night.
-								She was sure that this time,she will at any cost win her dad in
-								chess.She decided to use this opportunity to get answers to her curiosities too. </p>
-						</div>
-					</div>
-					<div class="back">
-						<div id="b2" class="back-content">
-							<img src="./public/images/chess/chess2.png" height="350px">
-
-						</div>
-					</div>
-				</div>
-				<!-- paper 3 -->
-				<div id="p3" class="paper">
-					<div class="front">
-						<div id="f3" class="front-content">
-							<p class="story1">
-								Just when her bishop was at threat she decided to distract her dad and also hit the
-								nail by asking him her questions regarding the event. She asked to her dad,"Dad! Why
-								was i named Saros?"Dad smiled and said,"There's a cycle called Saros cycle for eclipses
-								and i was fascinated with that research when you were just a little kid." Saros
-								(in excitement) asks again,"What's so wonderful about eclipses,Dad?". Dad happily
-								says," In order to unveil that you have to first know everything about the eclipses.
-								" "Checkmate",says Saros. </p>
-
-						</div>
-					</div>
-					<div class="back">
-						<div id="b3" class="back-content">
-							<img src="./public/images/chess/chess3.png" width="350">
-
-						</div>
-					</div>
-				</div>
-				<!-- paper4 -->
-				<div id="p4" class="paper">
-					<div class="front text">
-						<div id="f4" class="front-content">
-
-							<p class="story1">Dad was willingly ready to lose from his daughter to
-								introduce her to the magical world of eclipses. Bingo!Saros's plan was successful
-								and she was thrilled to know everything about eclipses.Saros's dad was obsessed with
-								eclipses.He was always ready to teach his daughter about the wonders of space and
-								couldn't
-								hold back teaching everything about this mystical event to her.
-								Saros's Dad says joyfully,
-								<b>"Now here begins the majestic journey of eclipses!!"</b>
-							</p>
-						</div>
-					</div>
-					<div class="back">
-						<div id="b4" class="back-content">
-							<h1> </h1>
-							<img class="cab" src="./public/images/thh.jpg">
-						</div>
-					</div>
-				</div>
+				<!-- next button -->
+				<button id="next-btn">
+					<i class="fas fa-arrow-circle-right"></i>
+				</button>
 			</div>
+		</main>
 
-			<!-- next button -->
-			<button id="next-btn">
-				<i class="fas fa-arrow-circle-right"></i>
-			</button>
+		<div class="render-container">
+			<canvas></canvas>
 		</div>
-	</main>
-
-	<div class="render-container">
-		<canvas></canvas>
-	</div>
-	<script type="module" src="./src/main.js"></script>
-</body>
-
+		<script type="module" src="./src/main.js"></script>
+	</body>
 </html>
