--- a/index.html
+++ b/index.html
@@ -124,6 +124,12 @@
 			</div>
 		</main>
 
+		<div class="help-overlay">
+			Click and drag to rotate the camera around. 
+			Right click with the mouse to pan.
+			Pinch in a Touchpad or scroll to zoom.
+		</div>
+
 		<div class="render-container">
 			<canvas></canvas>
 		</div>
