added questions and answers

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 
 	<body>
 		<main class="mainClass">
-			<header></header>
+			<header>
+				<h1 id="title">ECLIPSES</h1>
+				<h3 id="tagline">PERSPECTIVE IS EVERYTHING</h3>
+			</header>
 			<section>
 				<a href="#story" id="btn">Explore</a>
 				<img
@@ -125,9 +128,116 @@
 		</main>
 
 		<div class="help-overlay">
-			Click and drag to rotate the camera around. 
-			Right click with the mouse to pan.
-			Pinch in a Touchpad or scroll to zoom.
+			Click and drag to rotate the camera around. Right click with the mouse to
+			pan. Pinch in a Touchpad or scroll to zoom.
+		</div>
+
+		<div class="secondPage">
+			<div class="question-answers">
+				<div class="questions">1.How do Eclipses occur?</div>
+				<div class="answers">
+					Eclipses are the scientific phenomena that occur when any celestial
+					body comes in shadow of another celestial body which can cause the
+					blocking of light for temporary amount of time. There are mainly two
+					types of eclipses that occur. They are:Solar eclipses and Lunar
+					eclipses.
+				</div>
+			</div>
+			<div class="question-answers">
+				<div class="questions">
+					2.Why do only some people on Earth see an eclipse at a given time?
+				</div>
+				<div class="answers">
+					The person needs to be within or near the eclipse path to see the
+					eclipse and if he/she is out of it,the eclipse is not observed. Lunar
+					eclipses are visible from everywhere until the person is at the
+					night-side of the Earth but in case of the solar eclipse, the moon
+					casts the umbra and penumbra shadow over the Earth. Umbra is the
+					shadow that gets smaller as it reaches the Earth and people in umbra
+					will see a total eclipse while penumbra is the shadow that gets bigger
+					as it reaches the Earth and people in penumbra will only see a partial
+					eclipse.
+				</div>
+			</div>
+			<div class="question-answers">
+				<div class="questions">
+					3.What causes the Sun, Moon, and Earth to align?
+				</div>
+				<div class="answers">
+					The main reason for the Sun,Moon and Earth to align is the inclination
+					of the Moon that is tilted about 5.1 degrees with it's ecliptic
+					plane,inclination of Earth's orbit around the Sun and the Earth's axis
+					is tilted at an angle of about 23.5 degrees with respect to it's
+					ecliptic plane and due to nodes(intersection of the Moon's orbit and
+					the ecliptic plane) and the different phases of the moon that cause
+					the eclipses to occur accordingly.
+				</div>
+			</div>
+			<div class="question-answers">
+				<div class="questions">4.How often do eclipses occur?</div>
+				<div class="answers">
+					Partial lunar eclipses are pretty common and at least two partial
+					lunar eclipses occur every year but the total lunar eclipses are
+					rare.In case of solar eclipses, they occur every 18 months on the
+					Earth.According to NASA, On average, the same spot on the Earth only
+					gets to see a solar eclipse for a few minutes about every 375 years.
+					After about every 18 years, similar eclipses are occurred as studied
+					in the Saros cycle, which is approximately 18 years, 11 days and 8
+					hours cycle.
+				</div>
+			</div>
+			<div class="question-answers">
+				<div class="questions">
+					5.How do scientists know when and where eclipses will occur?
+				</div>
+				<div class="answers">
+					Scientists use the scientific table called Ephemerides that gives the
+					positions of celestial objects at a specific time and now in
+					advancement with technology, different apps are also available for
+					monitoring the positions of the celestial bodies and navigating them
+					accordingly.Eclipse season also gives information about the eclipses
+					to occur.They use different mathematical models and their
+					computational power to predict about the eclipses.
+				</div>
+			</div>
+			<div class="question-answers">
+				<div class="questions">
+					6.What is the difference between a lunar and solar eclipse?
+				</div>
+				<div class="answers">
+					In solar eclipse, moon comes in between the Sun and the Earth and
+					casts a shadow over the Earth.It can further be divided into Total
+					Solar Eclipse,Partial Solar Eclipse and Annular Solar Eclipse.
+					Similarly, in lunar eclipse, earth comes in between the Sun and the
+					Moon which causes the Earth's shadow to fall on the moon. It can
+					further be divided into Total Lunar Eclipse and Partial Lunar
+					Eclipse.Lunar eclipses occur and remain for some hours and are safe to
+					watch with our naked eyes while solar eclipses occur only for few
+					minutes and should not be looked at directly.
+				</div>
+			</div>
+			<div class="question-answers">
+				<div class="questions">
+					7. What is an eclipse season and why do they occur approximately every
+					six months (or twice a year)?
+				</div>
+				<div class="answers">
+					Eclipse seasons occur approximately every six months when the Sun is
+					near one of the nodes.They occur due to the axial parallelism of the
+					orbital plane of the Moon which is tilted about 5 degrees to the
+					Earth's orbital plane. Each eclipse season lasts for about 35 days and
+					solar and lunar eclipse can occur only this short period of time.About
+					every six months, Earth comes to a sweet spot in its orbit where a
+					perfect—or almost perfect—three-way alignment of the Earth, Moon, and
+					Sun can occur. Each sweet spot lasts for about 34.5 days: an eclipse
+					season.If there is a New Moon near the middle of an eclipse season, it
+					will form a straight line with the Earth and the Sun. The result will
+					be a total solar eclipse, or an annular solar eclipse, if the Moon is
+					too far from Earth to cover the Sun completely. In a similar way, a
+					Full Moon near the middle of an eclipse season will produce a total
+					lunar eclipse.
+				</div>
+			</div>
 		</div>
 
 		<div class="render-container">
