--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 					<div id="p2" class="paper">
 						<div class="front text">
 							<div id="f2" class="front-content">
+								<audio id="myAudio2" src="./public/audios/page2.mp3"></audio>
 								<p class="story1">
 									Once upon a time, there was a girl named Saros who was
 									obsessed with spaces and different scientific occurences.With
@@ -73,6 +74,7 @@
 					<div id="p3" class="paper">
 						<div class="front">
 							<div id="f3" class="front-content">
+								<audio id="myAudio3" src="./public/audios/page3.mp3"></audio>
 								<p class="story1">
 									Just when her bishop was at threat she decided to distract her
 									dad and also hit the nail by asking him her questions
@@ -96,6 +98,7 @@
 					<div id="p4" class="paper">
 						<div class="front text">
 							<div id="f4" class="front-content">
+								<audio id="myAudio4" src="./public/audios/page4.mp3"></audio>
 								<p class="story1">
 									Dad was willingly ready to lose from his daughter to introduce
 									her to the magical world of eclipses. Bingo!Saros's plan was
