margin and padding fixed btn changed

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<h3 id="tagline">PERSPECTIVE IS EVERYTHING</h3>
 			</header>
 			<section>
-				<a href="#story" id="btn">Explore</a>
+				<a href="#story" id="btn">Scroll TO Explore!</a>
 				<img
 					src="./public/images/desert.png"
 					alt="stars-image"
@@ -131,8 +131,10 @@
 		</main>
 
 		<div class="help-overlay">
-			Click and drag to rotate the camera around. Right click with the mouse to
-			pan. Pinch in a Touchpad or scroll to zoom.
+			<li>Click and drag to rotate the camera around.</li>
+			<li>Right click with the mouse to pan.</li>
+			<li>Pinch in a Touchpad or scroll to zoom.</li>
+			<li>Scroll on right to know about Eclipse</li>
 		</div>
 
 		<div class="secondPage">
