--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			crossorigin="anonymous"
 		></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Vite App</title>
+		<title>Eclipses</title>
 	</head>
 
 	<body>
@@ -29,7 +29,7 @@
 			</section>
 			<div class="story" id="story">
 				<button id="prev-btn">
-					<i class="fas fa-arrow-circle-left"></i>
+					<i>Back</i>
 				</button>
 				<!-- book -->
 				<div id="book" class="book">
@@ -125,7 +125,7 @@
 
 				<!-- next button -->
 				<button id="next-btn">
-					<i class="fas fa-arrow-circle-right"></i>
+					<i>Next</i>
 				</button>
 			</div>
 		</main>
