Post producstion bugs fixed

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<!-- NASA Space Apps Challange 2023 made and submitted by Team SOLV8ORS -->
-		
+
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 
@@ -40,7 +40,7 @@
 						<div class="front">
 							<div id="f1" class="front-content">
 								<h1>
-									<img class="image" src="./public/images/wtt.jpg" />
+									<img class="image" src="./public/images/wtt.webp" />
 								</h1>
 							</div>
 						</div>
@@ -244,6 +244,9 @@
 					Full Moon near the middle of an eclipse season will produce a total
 					lunar eclipse.
 				</div>
+			</div>
+			<div class="question-answers creds">
+				Made with ♥ by Team Solv8ors. Thank You!!
 			</div>
 		</div>
 
