path corrected for build

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<section>
 				<a href="#story" id="btn">Scroll TO Explore!</a>
 				<img
-					src="./public/images/desert.png"
+					src="./images/desert.png"
 					alt="stars-image"
 					id="mountains_front"
 				/>
@@ -40,13 +40,13 @@
 						<div class="front">
 							<div id="f1" class="front-content">
 								<h1>
-									<img class="image" src="./public/images/wtt.webp" />
+									<img class="image" src="./images/wtt.webp" />
 								</h1>
 							</div>
 						</div>
 						<div class="back">
 							<div id="b1" class="back-content">
-								<img src="./public/images/chess/chess.png" width="350" />
+								<img src="./images/chess/chess.png" width="350" />
 							</div>
 						</div>
 					</div>
@@ -54,7 +54,7 @@
 					<div id="p2" class="paper">
 						<div class="front text">
 							<div id="f2" class="front-content">
-								<audio id="myAudio2" src="./public/audios/page2.mp3"></audio>
+								<audio id="myAudio2" src="./audios/page2.mp3"></audio>
 								<p class="story1">
 									Once upon a time, there was a girl named Saros who was
 									obsessed with spaces and different scientific occurences.With
@@ -71,7 +71,7 @@
 						</div>
 						<div class="back">
 							<div id="b2" class="back-content">
-								<img src="./public/images/chess/chess2.png" height="350px" />
+								<img src="./images/chess/chess2.png" height="350px" />
 							</div>
 						</div>
 					</div>
@@ -79,7 +79,7 @@
 					<div id="p3" class="paper">
 						<div class="front">
 							<div id="f3" class="front-content">
-								<audio id="myAudio3" src="./public/audios/page3.mp3"></audio>
+								<audio id="myAudio3" src="./audios/page3.mp3"></audio>
 								<p class="story1">
 									Just when her bishop was at threat she decided to distract her
 									dad and also hit the nail by asking him her questions
@@ -95,7 +95,7 @@
 						</div>
 						<div class="back">
 							<div id="b3" class="back-content">
-								<img src="./public/images/chess/chess3.png" width="350" />
+								<img src="./images/chess/chess3.png" width="350" />
 							</div>
 						</div>
 					</div>
@@ -103,7 +103,7 @@
 					<div id="p4" class="paper">
 						<div class="front text">
 							<div id="f4" class="front-content">
-								<audio id="myAudio4" src="./public/audios/page4.mp3"></audio>
+								<audio id="myAudio4" src="./audios/page4.mp3"></audio>
 								<p class="story1">
 									Dad was willingly ready to lose from his daughter to introduce
 									her to the magical world of eclipses. Bingo!Saros's plan was
@@ -119,7 +119,7 @@
 						<div class="back">
 							<div id="b4" class="back-content">
 								<h1></h1>
-								<img class="cab" src="./public/images/thh.jpg" />
+								<img class="cab" src="./images/thh.jpg" />
 							</div>
 						</div>
 					</div>
